Updated chart June 27

--- a/src/styles/crypto.css
+++ b/src/styles/crypto.css
@@ -40,7 +40,7 @@
     background-color: #BB0163;
     color: #fff;
     cursor: pointer;
-    width: 108;
+    width: 130px;
     height: 52;
   }
   
