--- a/src/styles/crypto.css
+++ b/src/styles/crypto.css
@@ -115,9 +115,11 @@
   }
 
   .carousel {
-    height: 60%;
+    height: 70%;
     display: flex;
     align-items: center;
+    width: 85%;
+
     }
     
   .carouselItem {
@@ -125,16 +127,16 @@
     flex-direction: column;
     align-items: center;
     cursor: pointer;
-    text-transform: uppercase;
+    
     
     }
 
     .cardcrypto {
-      width: 350px;
-      height: 235px;
+      width: 240px;
+      height: 321px;
       position: relative;
       padding: 25px;
-      background: radial-gradient(178.94% 106.41% at 26.42% 106.41%, #FFF7B1 0%, rgba(255, 255, 255, 0) 71.88%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */, #FFFFFF;
+      background-color: #fff;
       box-shadow: 0px 155px 62px rgba(0, 0, 0, 0.01), 0px 87px 52px rgba(0, 0, 0, 0.05), 0px 39px 39px rgba(0, 0, 0, 0.09), 0px 10px 21px rgba(0, 0, 0, 0.1), 0px 0px 0px rgba(0, 0, 0, 0.1);
       border-radius: 23px;
       transition: all 0.8s cubic-bezier(0.15, 0.83, 0.66, 1);
@@ -148,8 +150,8 @@
     .containercrypto {
       width: 250px;
       height: 250px;
-      position: absolute;
-      right: -35px;
+      position: relative;
+      right: 10px;
       top: -50px;
       display: flex;
       align-items: center;
@@ -161,70 +163,18 @@
       width: 250px;
     }
     
-    .front {
-      padding-top: 45px;
-      margin-left: 25px;
-      display: inline;
-      position: absolute;
-      z-index: 11;
-      animation: clouds 8s infinite;
-      animation-timing-function: ease-in-out;
-    }
+
     
-    .back {
-      margin-top: -30px;
-      margin-left: 150px;
-      z-index: 12;
-      animation: clouds 12s infinite;
-      animation-timing-function: ease-in-out;
-    }
-    
-    .right-front {
-      width: 45px;
-      height: 45px;
-      border-radius: 50% 50% 50% 0%;
-      background-color: #4c9beb;
-      display: inline-block;
-      margin-left: -25px;
-      z-index: 5;
-    }
-    
-    .left-front {
-      width: 65px;
-      height: 65px;
-      border-radius: 50% 50% 0% 50%;
-      background-color: #4c9beb;
-      display: inline-block;
-      z-index: 5;
-    }
-    
-    .right-back {
-      width: 50px;
-      height: 50px;
-      border-radius: 50% 50% 50% 0%;
-      background-color: #4c9beb;
-      display: inline-block;
-      margin-left: -20px;
-      z-index: 5;
-    }
-    
-    .left-back {
-      width: 30px;
-      height: 30px;
-      border-radius: 50% 50% 0% 50%;
-      background-color: #4c9beb;
-      display: inline-block;
-      z-index: 5;
-    }
-    
+
     .sun {
+      margin: 00px;
       width: 200px;
       height: 200px;
       background: -webkit-linear-gradient(to right, #fcbb04, #fffc00);
       background: linear-gradient(to right, #fcbb04, #fffc00);
       border-radius: 60px;
       display: inline;
-      position: absolute;
+      
     }
     
     .sunshine {
@@ -256,27 +206,7 @@
         transform: translateX(15px);
       }
     }
-    
-    .cardcrypto-header {
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-    }
-    
-    .cardcrypto-header span:first-child {
-      word-break: break-all;
-      font-weight: 800;
-      font-size: 15px;
-      line-height: 135%;
-      color: rgba(87, 77, 51, 0.66);
-    }
-    
-    .cardcrypto-header span:last-child {
-      font-weight: 700;
-      font-size: 15px;
-      line-height: 135%;
-      color: rgba(87, 77, 51, 0.33);
-    }
+
     
     .temp {
       position: absolute;
@@ -289,10 +219,10 @@
     }
     
     .temp-scale {
-      width: 80px;
-      height: 36px;
+      width: 90%;
+      height: 50px;
       position: absolute;
-      right: 25px;
+      right: 11px;
       bottom: 25px;
       display: flex;
       align-items: center;
@@ -301,12 +231,19 @@
       border-radius: 9px;
     }
     
-    .temp-scale span {
-      font-weight: 700;
-      font-size: 13px;
-      line-height: 134.49%;
-      color: rgba(87, 77, 51, 0.66);
-    }
+  .temp-scale span {
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 134.49%;
+}
+
+.temp-scale span.positive {
+  color: green;
+}
+
+.temp-scale span.negative {
+  color: red;
+}
   
     .chart-container {
       display: flex;
@@ -322,3 +259,64 @@
       margin-top: 20px;
     }
     
+.green {
+  color: green;
+}
+
+.red {
+  color: red;
+}
+
+.carousel-card-details{
+  text-align: center;
+font-size: 37px;
+font-family: Roboto;
+font-weight: 500;
+ 
+}
+
+.carousel-background{
+  background-color:#0D0D2B;
+  width: 100%;
+  height: 100%;
+}
+.image-style{
+  width:30px;
+  height:30px;
+}
+.carousel-page-content{
+  justify-content: center;
+  line-height: 500%;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  color: white;
+  font-size: 40;
+  font-weight: 400;
+
+}
+
+.logo{
+  width:150px;
+  height:100px;
+}
+
+.Container{
+  width: 100vw; 
+  height: 100vh; 
+  overflow: hidden; 
+}
+
+.content-title{
+  font-size: 50px;
+  font-family: roboto;
+  font-weight: 600;
+  color:#FF78BF;
+}
+
+.content-paragraph{
+  font-size: 32px;
+  font-family: roboto;
+  color:#fff;
+}
