--- a/src/styles/crypto.css
+++ b/src/styles/crypto.css
@@ -77,12 +77,34 @@
     align-items: center;
     height: 100%;
   }
+
+  .footer-container{
+    width: 100%;
+   margin: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100%;
+  }
   
  .footerbar{
   position: relative;
+  margin-top: 40%;
   bottom: 0;
   left: 0;
   width: 100%;
+  height: 200px;
+  background-color: white;
+  z-index: 1;
+  opacity: 1; 
+
+ }
+
+ .footercenter{
+   display: flex;
+  justify-content: center;
+  align-items: center;
+  
  }
   .navbar {
     height: 60px;
@@ -90,6 +112,11 @@
     position: relative;
   }
   
+
+  .nav-elements{
+    display: flex;
+    flex: 2;
+  }
   
 
   .nav-elements ul {
@@ -274,6 +301,15 @@
 .temp-scale span.negative {
   color: red;
 }
+
+.positive{
+  color: green;
+}
+
+.negative{
+  color: red;
+
+}
   
     .chart-container {
       display: flex;
@@ -313,6 +349,7 @@ font-weight: 500;
 .image-style{
   width:30px;
   height:30px;
+
 }
 
 .left-right-style{
@@ -339,6 +376,12 @@ font-weight: 500;
 .logo{
   width:150px;
   height:100px;
+  display: flex;
+  flex: 1;
+}
+
+.logo-footer{
+  margin-left: 80px;
 }
 
 .Container{
@@ -513,5 +556,28 @@ font-weight: 500;
   font-size: 32px;
   font-family: roboto;
   color:#7A7A7A;
+
+}
+
+.social-icons {
+  display: flex;
+  justify-content: flex-end; 
+  padding-right: 100px;
+  flex:1;
+  /* Add this line to push the icons to the left */
+}
+
+.footer-bottom-text{
+  display: flex;
+  justify-content: center;
+}
+
+.error-title{
+  font-size: 35px;
+  font-family: Roboto;
+  font-weight: 300;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
 }
