--- a/src/styles/crypto.css
+++ b/src/styles/crypto.css
@@ -918,3 +918,166 @@ flex-direction: column;
   display: block;
   padding-bottom: 4px;
 }
+
+.favorite-button {
+  border: none;
+  background: none;
+  cursor: pointer;
+  padding: 0;
+  outline: none;
+}
+
+.favorite-icon {
+  color: gold;
+}
+
+.non-favorite-icon {
+  color: gray;
+}
+
+.card-container {
+  display: grid;
+  grid-template-columns: repeat(3, 0fr); 
+  column-gap: 80px;
+  row-gap: 40px; 
+  justify-content: center;
+  align-items: center;
+  margin-top: 3%;
+}
+
+
+.card-news{
+  display: flex;
+  flex-direction: row;
+      width: 470px; 
+    height: 300px; 
+    padding: 4%;
+    background-color: #fff;
+   border-radius: 32px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.news-image{
+
+display: flex;
+width: 180px;
+height: 200px;
+border-radius: 35px;
+flex: 1;
+}
+
+
+.logo-image{
+  width: 50px;
+  height: 50px;
+  border-radius:50% ;
+  margin:20% 0% 5%; 
+  
+}
+.source-logo-section{
+  display: flex;
+  flex-direction: row;
+  margin: 2%;
+}
+
+.news-source{
+  flex: 0.5;
+  font-family: Roboto;
+  color: #6C7072;
+  font-size: 20;
+  margin:30% 10% 0%; 
+  font-weight: 600;
+
+}
+
+.news-column-div{
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  margin: 4%;
+
+
+}
+
+.news-content{
+  flex: 2;
+  display: flex;
+  width: 100px;
+  height: 100px;
+  flex-direction: column;
+  margin: 3%;
+  font-family: Roboto;
+  margin-top: 0px;
+}
+
+.NewsPage{
+  width: 100vw;
+  height: 100vh;
+  background-image: url("../Assets/newsbackground.svg");
+  background-size: cover;
+  background-position: center;
+  overflow-y: auto;
+}
+.load-more-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+@keyframes progressBarHighlight {
+  0% {
+    width: 0%;
+  }
+  100% {
+    width: 100%;
+  }
+}
+
+.outer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-self: center;
+}
+
+.button {
+  border: 1px solid rgb(0, 17, 255);
+  border-radius: 3px;
+  width: 250px;
+  height: 60px;
+  display: block;
+  background: linear-gradient(to right, rgb(150, 150, 235) 50%, rgb(172, 5, 255) 50%);
+  background-size: 200% 100%;
+  background-position: right bottom;
+  transition: all .5s ease-out;
+}
+
+.button:hover {
+  background-position: left bottom;
+}
+
+.text {
+  text-align: center;
+  margin: 5%;
+  font-size: 20px;
+  line-height: 30px; 
+  font-family: Roboto;
+  font-weight: 600;
+  color: rgb(255, 255, 255);
+  transition: all .6s ease-out;
+  display: block;
+}
+
+.text:hover {
+  color: white;  
+}
+
+.card-container-transition {
+  transition: opacity 5.0s ease-in-out;
+}
+
+.card-hover:hover {
+  /* Apply your desired hover styles */
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+  transform: scale(1.20);
+}
