--- a/src/styles/crypto.css
+++ b/src/styles/crypto.css
@@ -1078,6 +1078,7 @@ flex: 1;
 
 .card-hover:hover {
   /* Apply your desired hover styles */
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
-  transform: scale(1.20);
+  transform: scale(1.01);
+  box-shadow: 5px 5px 10px 10px #FF78BF;
+border-radius: 32px;
 }
