--- a/src/styles/crypto.css
+++ b/src/styles/crypto.css
@@ -477,14 +477,137 @@ font-weight: 500;
   padding-bottom: 100px;
 }
 
-/* .team-section {
-  width: 100%;
+.team-section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* width: 100%;
   height: 100vh;
   background-image: url("../Assets/Team-bg.svg");
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: center; */
+  border-top-right-radius: 50%;
+  border-top-left-radius: 70%;
+  /* border-radius: 2552.254px; */
+  background-color: #0D0D2B;
+  height: 130vh;
+
+  /* border-top-right-radius: 51em 12em;
+  border-top-left-radius: 69em 29em; */
+
+  border-top-right-radius: 51em 12em;
+    border-top-left-radius: 69em 48em;
+}
+
+
+
+.grid-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr; /* Two columns with equal width */
+  grid-template-rows: 1fr 1fr; /* Two rows with equal height */
+}
+
+.grid-item {
+padding: 26px;
+}
+
+.grid-item:nth-child(odd) {
+  padding-top: 120px;
+}
+
+
+.team-card {
+  background-color: transparent;
+  width: 300px;
+  height: 300px;
+  perspective: 1000px;
+}
+
+.team-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+}
+
+.team-card:hover .team-card-inner {
+  transform: rotateY(180deg);
+}
+
+.team-card-front, .team-card-back {
+  position: absolute;
+  width: 100%;
+  /* height: 100%; */
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  border-radius: 10%;
+}
+
+.team-card-front {
+  background-color: #fff;
+  color: black;
+  height: 36vh;
+  padding-top: 3rem;
+}
+
+/* .team-card-front img {
+  width: 100%; height: auto;
 } */
+
+.team-card-front-image {
+  /* border-radius: 50%;
+  width: 180px; */
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.team-card-back {
+  background-color: #fff;
+  color: black;
+  transform: rotateY(180deg);
+  height: 36vh;
+  padding-top: 3rem;
+}
+
+.team-member{
+  margin: 0;
+  color: #000;
+  font-size: 40px;
+  text-align: center;
+  line-height: 70px;
+}
+
+.team-position{
+  margin: 0;
+  color: #000;
+  font-size: 20px;
+  text-align: center;
+}
+
+.team-info {
+  margin: 0;
+  color: #000;
+  font-size: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 300px;
+}
+
+.team-info p {
+  margin: 0;
+}
+
+
+
+/* About page */
 
 
 .FeaturePageBackground{
